Added signature page

--- a/inst/rmarkdown/templates/thesis/template.yaml
+++ b/inst/rmarkdown/templates/thesis/template.yaml
@@ -1,2 +1,2 @@
 name: Dissertate CICESE
-description: Rmarkdown adaptation for the official CICESE 2018 template
+description: Rmarkdown adaptation for the official CICESE 2018 template.
